# ATM-GuardAI

./: .gitignore  CAMERA-SETUP.md  README.md
ai_service/: .env  .gitignore  Dockerfile  app.py  augment_dataset.py  create_model.py  requirements.txt  run_model.py  test_cameras.py
api/: .gitignore  package-lock.json  package.json
api/scripts/: make-user-admin.js  register-demo-cameras.js
api/src/: index.js
api/src/config/: db.js
api/src/controllers/: alertController.js  cameraController.js  liveFeedsController.js  user.controller.js  userController.js
api/src/middleware/: alertMiddleware.js  authMiddleware.js
api/src/middlewares/: aiAuth.js  auth.js
api/src/models/: Event.js  Report.js  User.js  UserModel.js  alertModel.js  cameraModel.js  counterModel.js
api/src/routes/: alertRoutes.js  cameraRoutes.js  event.routes.js  liveFeedsRouter.js  report.routes.js  user.routes.js  userRouter.js
api/src/utils/: ai.js
infra/: docker-compose.yml
services/: .gitignore  pyproject.toml
services/app/: config.py  database.py  main.py
services/app/controllers/: camera_controller.py  user_controller.py
services/app/middleware/: user_middleware.py
services/app/models/: camera_model.py  counter.py  counter_model.py  user.py  user_model.py
services/app/routes/: camera_routes.py  user_routes.py
services/app/schemas/: camera_schema.py  user_schema.py
services/app/utils/: jwt_handler.py
web/: .env  .gitignore  index.html  package-lock.json  package.json
web/scripts/: create-admin-user.js
web/src/: App.css  App.jsx  firebase.js  index.css  main.jsx
(+25 files in other folders)
